--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,13 +1,9 @@
-#source = ~/.config/hypr/configs/env_var.conf
-#source = ~/.config/hypr/configs/env_nvidia.conf
-
 $scripts = .config/hypr/scripts
 
 # You have to change this based on your monitor 
 monitor = ,highres,auto,1
 
 # Status bar
-# exec-once=eww open bar
 exec-once=waybar
 exec-once=hyprpaper
 exec-once = $scripts/xdgdesktop
@@ -16,12 +12,8 @@ exec-once = $scripts/gtkthemes
 #Notification 
 exec-once=dunst
 
-# Wallpaper
-#exec-once=swaybg -o \* -i ~/.config/hypr/wallpapers/night.jpg -m fill
-#exec-once=$scripts/initWall
-
 # Bluetooth
-exec-once=blueman-applet # Make sure you have installed blueman
+# exec-once=blueman-applet # Make sure you have installed blueman
 
 # Screen Sharing 
 exec-once=systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
@@ -129,10 +121,7 @@ bindle=,XF86MonBrightnessDown,exec,~/.config/hypr/scripts/brightness down # decr
 bind = $mainMod, P, exec, grim -g "$(slurp)" - | swappy -f -
 
 # Screen recorder
-#bind=SUPER,R,exec,wf-recorder -g "$(slurp)"
-
-# Emoji selector 
-#bind = $mainMod, SEMICOLON, exec, rofi -modi emoji -show emoji
+bind=SUPER,R,exec,wf-recorder -g "$(slurp)"
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
