--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -1,40 +1,39 @@
 # See this wiki page for more info:
 # https://github.com/dylanaraps/neofetch/wiki/Customizing-Info
 print_info() {
-    info title
-    info underline
-
-    info "OS" distro
-    info "Host" model
-    info "Kernel" kernel
-    info "Uptime" uptime
-    info "Packages" packages
-    info "Shell" shell
-    info "Resolution" resolution
-    info "DE" de
-    info "WM" wm
-    info "WM Theme" wm_theme
-    info "Theme" theme
-    info "Icons" icons
-    info "Terminal" term
-    info "Terminal Font" term_font
-    info "CPU" cpu
-    info "GPU" gpu
-    info "Memory" memory
-
+   # info title
+    # info underline
+    prin "\n"
+    prin "$(color 1) Ksaze"
+    prin "┌──────────────────────────────────────┐"
+    # info underline
+    info "\n \n OS" distro
+    info "\n \n Shell" shell
+    # info "\n \n Host" model
+    # info "\n \n Kernel" kernel
+    info "\n \n Uptime" uptime
+    info "\n \n Packages" packages
+    #info "\n \n Resolution" resolution
+    info "\n \n DE" de
+    # info "\n \n WM" wm
+    #info "\n \n WM Theme" wm_theme
+    #info "\n \n Theme" theme
+    #info "\n \n Icons" icons
+    info "\n \n Terminal" term
+    #info "\n \n Terminal Font" term_font
+    # info "\n \n CPU" cpu
+    #info "\n \n GPU" gpu
+    info "\n \n Memory" memory
     # info "GPU Driver" gpu_driver  # Linux/macOS only
     # info "CPU Usage" cpu_usage
-    # info "Disk" disk
-    # info "Battery" battery
-    # info "Font" font
-    # info "Song" song
-    # [[ "$player" ]] && prin "Music Player" "$player"
-    # info "Local IP" local_ip
-    # info "Public IP" public_ip
-    # info "Users" users
-    # info "Locale" locale  # This only works on glibc systems.
-
-    info cols
+    info "\n \n Disk" disk
+    #info "\n \n Battery" battery
+    #info "\n \n Font" font
+    # info "\n \n Song" song
+    # [[ "$player" ]] && prin "\n \n Music Player" "$player"
+    # info "\n \n Local IP" local_ip
+    # info "Public IP" public_ip 
+    prin "└──────────────────────────────────────┘"
 }
 
 # Title
@@ -694,7 +693,7 @@ disk_display="off"
 # Values:   'ascii', 'caca', 'chafa', 'jp2a', 'iterm2', 'off',
 #           'pot', 'termpix', 'pixterm', 'tycat', 'w3m', 'kitty'
 # Flag:     --backend
-image_backend="ascii"
+image_backend='kitty'
 
 # Image Source
 #
@@ -708,7 +707,8 @@ image_backend="ascii"
 # NOTE: 'auto' will pick the best image source for whatever image backend is used.
 #       In ascii mode, distro ascii art will be used and in an image mode, your
 #       wallpaper will be used.
-image_source="auto"
+image_source='/home/akshat/.config/neofetch/icon.jpg'
+# image_source='/home/akshat/.config/neofetch/logo.txt'
 
 
 # Ascii Options
@@ -808,7 +808,7 @@ thumbnail_dir="${XDG_CACHE_HOME:-${HOME}/.cache}/thumbnails/neofetch"
 #
 # See this wiki page to learn about the fit and fill options.
 # https://github.com/dylanaraps/neofetch/wiki/What-is-Waifu-Crop%3F
-crop_mode="normal"
+crop_mode="fit"
 
 # Crop offset
 # Note: Only affects 'normal' crop mode.
@@ -826,14 +826,14 @@ crop_offset="center"
 # Values:  'auto', '00px', '00%', 'none'
 # Flags:   --image_size
 #          --size
-image_size="auto"
+image_size="34%"
 
 # Gap between image and text
 #
 # Default: '3'
 # Values:  'num', '-num'
 # Flag:    --gap
-gap=3
+gap=2
 
 # Image offsets
 # Only works with the w3m backend.
