--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -15,6 +15,8 @@ initial_window_height 35c
 window_padding_width 20
 confirm_os_window_close 0
 
+allow_remote_control yes
+enable_graphics yes
 # Upstream colors {{{
 
 # Special
