tmux config and nvim bloat removed

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -118,7 +118,8 @@ bindle=,XF86MonBrightnessUp,exec,~/.config/hypr/scripts/brightness up  # increas
 bindle=,XF86MonBrightnessDown,exec,~/.config/hypr/scripts/brightness down # decrease screen brightnes
 
 # Screen shot 
-bind = $mainMod, P, exec, grim -g "$(slurp)" - | swappy -f -
+# bind = $mainMod SHIFT, S, exec, grim -g "$(slurp)" - | swappy -f -
+bind = $mainMod SHIFT, S, exec, grim -g "$(slurp)" - | wl-copy
 
 # Screen recorder
 bind=SUPER,R,exec,wf-recorder -g "$(slurp)"
