--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,7 +1,17 @@
+set -g default-terminal "tmux-256color"
+set -g focus-events on
+
 set -s escape-time 1
 set -g base-index 1
 set -g pane-base-index 1
+set -g renumber-windows on
+set -g mode-keys vi
 
-set -g default-terminal "tmux-256color"
+set -g status-position top
+set -g status-justify absolute-centre
+set -g status-style "bg=default"
+set -g window-status-current-style "fg=blue bold"
+set -g status-right ""
+set -g status-left "#S"
 
-set -g mouse on
+bind f run-shell "tmux neww ~/.config/tmux/scripts/tmux-session-dispensary.sh"
