--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,7 @@
 .config/gh
 .config/pulse
 .config/dconf
-.config/user-dirs.locale/
+.config/user-dirs.locale
+.config/mimeapps.list
+.config/pavucontrol.ini
+.config/user-dirs.dirs
